2009-12-08 Nikolay V. Nemshilov aka St.
  o Version 1.5.0 Release
    * All the old browsers support hacks were moved out
    * The CSS Selectors engine reworked
    * DOM elements processing optimization
    * Observer processing optimization
    * Ruby like mixins callback for Class
    * Fx.Morph reworked to make it faster and smarter
    * Fx.Scroll was added
    * Function#rcurry feature
    * Function#chain feature
    * Options#cutOptions feature
    * Functions binding optimization
    * Manual positions calculations fix
    

2009-09-24 Nikolay V. Nemshilov aka St.
  o Version 1.4.3 Release
    * Element#position in Konqueror fix
    * Element#moveTo fix
    * Fx.Slide the end sizes returning back fix
    * Observer#stopObserve fix for methods attached by name
    * Observer camelized event-names support fix
    * Faster $A implementation
    * Cleaning up

2009-09-09 Nikolay V. Nemshilov aka St.
  o Version 1.4.2 Release
    * Form unit fixes
    * Form#remotize spinners autodiscovery feature
    * Form.addMethods feature
    * Form.Element.addMethods feature
    * Event.addMethods feature
    * Xhr.IFramed response reading fixes
    * Xhr.load now uses 'get' method by default
    * Xhr global spinners handling fix
    * Xhr.Options.spinnerFx option
    * Fx.Morph faster styles calculations
    * Fx.options.fps fix for IE
    * Fx.Morph to css-class functionality moved for goods
    * String regexps usage optimization

2009-08-22 Nikolay V. Nemshilov aka St.
  o Version 1.4.1 Release
    * Manual CSS Selectors performance update
    * Array and String performance updates
    * String unicode support reworked
    * Element#position bug fix for WebKit browsers
    * Xhr JSON responses sanitizing
    * Camelized event names support in the shortcusts
    * Cookie.enabled() method
    * Form.Element#onChange shortcut
    * Element#stopEvent method

2009-08-14 Nikolay V. Nemshilov aka St.
  o Version 1.4.0 Release
    * Better native css-selectors support