@@ -13,7 +13,7 @@ require 'rake'
 require 'fileutils'
 require File.dirname(__FILE__)+'/lib/front_compiler/init.rb'
 
-RIGHTJS_VERSION = '1.5.0'
+RIGHTJS_VERSION = '1.5.1'
 
 BUILD_DIR   = 'build'
 BUILD_FILE  = 'right'
